<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculatorFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/calculatorBody"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:foregroundGravity="center_vertical|center|center_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent=".5"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline_top"
            app:layout_constraintBottom_toBottomOf="@id/guideline_bottom"
            app:layout_constraintWidth_percent=".9"
            app:srcCompat="@drawable/round_rect_shape" />

        <TableLayout
            android:id="@+id/buttonGrid"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:stretchColumns="*"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent=".42"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/screenTextView"
            app:layout_constraintWidth_percent=".8">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp">

                <Button
                    android:id="@+id/modBtn"
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_column="0"
                    android:background="@drawable/operatorbtn"
                    android:fontFamily="@font/roboto_slab_bold"
                    android:padding="0dp"
                    android:text="@string/mod"
                    android:textColor="@color/cream"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/oneBtn"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_column="2"
                    android:background="@drawable/numberbtn"
                    android:fontFamily="@font/roboto_slab_bold"
                    android:padding="0dp"
                    android:text="@string/one"
                    android:textColor="@color/cream"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/twoBtn"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_column="4"
                    android:background="@drawable/numberbtn"
                    android:fontFamily="@font/roboto_slab_bold"
                    android:padding="0dp"
                    android:text="@string/two"
                    android:textColor="@color/cream"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/threeBtn"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_column="6"
                    android:background="@drawable/numberbtn"
                    android:fontFamily="@font/roboto_slab_bold"
                    android:padding="0dp"
                    android:text="@string/three"
                    android:textColor="@color/cream"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/divideBtn"
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_column="8"
                    android:background="@drawable/operatorbtn"
                    android:fontFamily="@font/roboto_slab_bold"
                    android:padding="0dp"
                    android:text="@string/divide"
                    android:textColor="@color/cream"
                    android:textSize="30sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="15dp">

                <Button
                    android:id="@+id/sqrtBtn"
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_column="0"
                    android:background="@drawable/operatorbtn"
                    android:fontFamily="@font/roboto_slab_bold"
                    android:padding="0dp"
                    android:text="@string/square_root"
                    android:textColor="@color/cream"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/fourBtn"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_column="2"
                    android:background="@drawable/numberbtn"
                    android:fontFamily="@font/roboto_slab_bold"
                    android:padding="0dp"
                    android:text="@string/four"
                    android:textColor="@color/cream"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/fiveBtn"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_column="4"
                    android:background="@drawable/numberbtn"
                    android:fontFamily="@font/roboto_slab_bold"
                    android:padding="0dp"
                    android:text="@string/five"
                    android:textColor="@color/cream"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/sixBtn"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_column="6"
                    android:background="@drawable/numberbtn"
                    android:fontFamily="@font/roboto_slab_bold"
                    android:padding="0dp"
                    android:text="@string/six"
                    android:textColor="@color/cream"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/multiplyButton"
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_column="8"
                    android:background="@drawable/operatorbtn"
                    android:fontFamily="@font/roboto_slab_bold"
                    android:padding="0dp"
                    android:text="@string/multiply"
                    android:textColor="@color/cream"
                    android:textSize="30sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="15dp">

                <Button
                    android:id="@+id/clearBtn"
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_column="0"
                    android:background="@drawable/settingbtn"
                    android:fontFamily="@font/roboto_slab_bold"
                    android:padding="0dp"
                    android:text="@string/clear"
                    android:textColor="@color/cream"
                    android:textSize="25sp" />

                <Button
                    android:id="@+id/sevenBtn"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_column="2"
                    android:background="@drawable/numberbtn"
                    android:fontFamily="@font/roboto_slab_bold"
                    android:padding="0dp"
                    android:text="@string/seven"
                    android:textColor="@color/cream"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/eightBtn"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_column="4"
                    android:background="@drawable/numberbtn"
                    android:fontFamily="@font/roboto_slab_bold"
                    android:padding="0dp"
                    android:text="@string/eight"
                    android:textColor="@color/cream"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/nineBtn"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_column="6"
                    android:background="@drawable/numberbtn"
                    android:fontFamily="@font/roboto_slab_bold"
                    android:padding="0dp"
                    android:text="@string/nine"
                    android:textColor="@color/cream"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/minusButton"
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_column="8"
                    android:background="@drawable/operatorbtn"
                    android:fontFamily="@font/roboto_slab_bold"
                    android:padding="0dp"
                    android:text="@string/minus"
                    android:textColor="@color/cream"
                    android:textSize="30sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/equalBtn"
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_column="0"
                    android:background="@drawable/settingbtn"
                    android:fontFamily="@font/roboto_slab_bold"
                    android:padding="0dp"
                    android:text="@string/equals"
                    android:textColor="@color/cream"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/pointBtn"
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_column="2"
                    android:background="@drawable/settingbtn"
                    android:fontFamily="@font/roboto_slab_bold"
                    android:padding="0dp"
                    android:text="@string/decimal"
                    android:textColor="@color/cream"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/plusMinusButton"
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_column="4"
                    android:background="@drawable/settingbtn"
                    android:fontFamily="@font/roboto_slab_bold"
                    android:padding="0dp"
                    android:text="@string/plusminus"
                    android:textColor="@color/cream"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/zeroBtn"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_column="6"
                    android:background="@drawable/numberbtn"
                    android:fontFamily="@font/roboto_slab_bold"
                    android:padding="0dp"
                    android:text="@string/zero"
                    android:textColor="@color/cream"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/addButton"
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_column="8"
                    android:background="@drawable/operatorbtn"
                    android:fontFamily="@font/roboto_slab_bold"
                    android:padding="0dp"
                    android:text="@string/plus"
                    android:textColor="@color/cream"
                    android:textSize="30sp" />

            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/screenTextView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/calcscreen"
            android:fontFamily="@font/roboto_mono"
            android:gravity="center_horizontal"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:textAlignment="textEnd"
            android:textColor="@color/violet"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent=".07"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/calculatorBody"
            app:layout_constraintWidth_percent=".8" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.25"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.75"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>